# sibsutis-ts

./: .gitignore
1-kurs/АиСД 1 курс/coursework-main/: alghoritm_slq.c  new.1.c  new.2.c
1-kurs/АиСД 1 курс/лаба 1 вариант 7/: a.out  labs.c  labs2.c  labs3.c  labs4.c  labs5.c  labs6.c
1-kurs/АиСД 1 курс/лаба 2 вариант 7/: a.out  init.c
1-kurs/АиСД 1 курс/лаба 3 вариант N/: a.out  init.c
1-kurs/АиСД 1 курс/лаба 4 вариант 11/: a.out  init.c
1-kurs/ЯиМП 1 курс/ЯиМП 6/: a.out  init.c
1-kurs/ЯиМП 1 курс/лаба 1/: init.c  ЛР 1 Структура програмы на С — детский вариант.doc
1-kurs/ЯиМП 1 курс/лаба 2 вариант 9/: a.out  laba2.c  laba2_2.c  laba2_3.c  laba2_4.c
1-kurs/ЯиМП 1 курс/лаба 3 вариант 5/: a.out  labs2.c  labs3.c  labs4.c  Лр 3 Циклы.doc
1-kurs/ЯиМП 1 курс/лаба 4 вариант 7/: a.out  init.c
1-kurs/ЯиМП 1 курс/лаба 5 вариант 3/: a.out  init.c
3-kurs/avs/rgr/: docker-compose.yaml  nginx.conf  ssl_cert_generate.sh
3-kurs/avs/rgr_v1/: deploy.sh  docker-compose.yml  jenkins-keystore.jks  ssl.conf
3-kurs/avs/rgr_v2/: Dockerfile  cert.sh  docker-compose-jenkins.yml  nginx.conf
3-kurs/math_dsp/16.10_pract5/: main.py
3-kurs/math_dsp/laba4/: main.py
3-kurs/math_dsp/pract02/: main.py
3-kurs/math_dsp/pract03/: ggwp.py  main.py
3-kurs/math_dsp/pract13_11/: ht.py  main.py
3-kurs/math_dsp/pract_04_12/: script.py
3-kurs/math_dsp/pract_06_11/: main.py
3-kurs/math_dsp/pract_11_12/: src.py
3-kurs/math_dsp/pract_20_11/: fir_2.py  main.py
3-kurs/sdr/pract_20_11/code/pj/: CMakeLists.txt
3-kurs/sdr/pract_20_11/code/pj/src/: main.cpp
(+160 files in other folders)
